RESOLVED FIXED282781
[css-scoping] @scope start and end are not forgiving selector list
https://bugs.webkit.org/show_bug.cgi?id=282781
Summary [css-scoping] @scope start and end are not forgiving selector list
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-07 15:22:16 PST
Matthieu Dubet
Comment 2 2024-11-07 15:24:21 PST
EWS
Comment 3 2024-11-09 18:26:57 PST
Committed 286393@main (944256f16387): <https://commits.webkit.org/286393@main> Reviewed commits have been landed. Closing PR #36349 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.