[CSS] @scope start/end are normal (non forgiving) selector list https://bugs.webkit.org/show_bug.cgi?id=282781 rdar://139471866

Reviewed by Ryan Reno.

https://github.com/w3c/csswg-drafts/commit/9a7b555711b2405b67e963d1c7494cc2917e4c15

* LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/at-scope-parsing-expected.txt:
* Source/WebCore/css/parser/CSSParserImpl.cpp:
(WebCore::CSSParserImpl::consumeScopeRule):

Canonical link: https://commits.webkit.org/286393@main